--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
+    "build": "gulp build",
+    "start": "node ./build/server/index.js",
+    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,28 @@
   },
   "homepage": "https://github.com/Mzhach/games.solard.pro#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.7.4",
+    "@types/socket.io": "^2.1.4",
+    "@types/uuid": "^7.0.0",
+    "browserify": "^16.5.0",
+    "event-stream": "^4.0.1",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "tsify": "^4.0.1",
+    "typescript": "^3.7.5",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
