--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,8 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "build"
-    }
+    },
+    "exclude": [
+      "src/client"
+    ]
   }
